force-app/main/default/objects/Knackly_API_Data__mdt/Knackly_API_Data__mdt.object-meta.xml
<CustomObject>
    <description>Knackly API Data</description>
    <label>Knackly API Data</label>
    <pluralLabel>Knackly API Data</pluralLabel>
</CustomObject>