force-app/main/default/objects/Knackly_API_Data__mdt/fields/base_url__c.field-meta.xml
<CustomField>
    <fullName>base_url__c</fullName>
    <description>base url</description>
    <inlineHelpText>base url</inlineHelpText>
    <label>base url</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>