force-app/main/default/objects/Knackly_API_Data__mdt/fields/catalog_name__c.field-meta.xml
<CustomField>
    <fullName>catalog_name__c</fullName>
    <description>catalog name</description>
    <inlineHelpText>catalog name</inlineHelpText>
    <label>catalog name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>