force-app/main/default/objects/Knackly_API_Data__mdt/fields/key_id__c.field-meta.xml
<CustomField>
    <fullName>key_id__c</fullName>
    <description>key id</description>
    <inlineHelpText>key id</inlineHelpText>
    <label>key id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>