force-app/main/default/objects/Knackly_API_Data__mdt/fields/secret__c.field-meta.xml
<CustomField>
    <fullName>secret__c</fullName>
    <description>secret</description>
    <inlineHelpText>secret</inlineHelpText>
    <label>secret</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>