force-app/main/default/objects/Knackly_API_Data__mdt/fields/workspace__c.field-meta.xml
<CustomField>
    <fullName>workspace__c</fullName>
    <description>workspace</description>
    <inlineHelpText>workspace</inlineHelpText>
    <label>workspace</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>